set(CMSIS_TARGET_NAME cmsis_o)

list(APPEND INCLUDE_DIR_FOR_CMSIS ${CMAKE_SOURCE_DIR}/CMSIS/Core/) # core_cm3.h
list(APPEND INCLUDE_DIR_FOR_CMSIS ${CMAKE_SOURCE_DIR}/CMSIS/Device/MDR32F9Qx/startup/) # system_MDR32F9Qx.h
list(APPEND INCLUDE_DIR_FOR_CMSIS ${CMAKE_SOURCE_DIR}/CMSIS/Device/MDR32F9Qx/inc/) # MDR32Fx.h
list(APPEND INCLUDE_DIR_FOR_CMSIS ${CMAKE_SOURCE_DIR}/include/) # MDR32F9Qx_board.h, MDR32F9Qx_config.h
list(APPEND INCLUDE_DIR_FOR_CMSIS ${CMAKE_SOURCE_DIR}/MDR32F9Qx_StdPeriph_Driver/inc/) # MDR32F9Qx_lib.h

# message("INCLUDE_DIR_FOR_CMSIS = ${INCLUDE_DIR_FOR_CMSIS}")

set(SOURCE_DIR_CMSIS ${CMAKE_SOURCE_DIR}/CMSIS/Device/MDR32F9Qx/startup)

add_library(${CMSIS_TARGET_NAME} OBJECT 
    ${SOURCE_DIR_CMSIS}/startup_MDR32F9Qx.s 
    ${SOURCE_DIR_CMSIS}/system_MDR32F9Qx.c
)
target_include_directories(${CMSIS_TARGET_NAME} PRIVATE ${INCLUDE_DIR_FOR_CMSIS})
target_compile_options(${CMSIS_TARGET_NAME} PRIVATE ${CPU})
target_compile_definitions(${CMSIS_TARGET_NAME} PRIVATE -DUSE_MDR1986VE9x)