set(SPD_TARGET_NAME spd_o)

list(APPEND INCLUDE_DIR_FOR_SPD ${CMAKE_SOURCE_DIR}/CMSIS/Core/) 
list(APPEND INCLUDE_DIR_FOR_SPD ${CMAKE_SOURCE_DIR}/CMSIS/Device/MDR32F9Qx/inc/) 
list(APPEND INCLUDE_DIR_FOR_SPD ${CMAKE_SOURCE_DIR}/CMSIS/Device/MDR32F9Qx/startup/)
list(APPEND INCLUDE_DIR_FOR_SPD ${CMAKE_SOURCE_DIR}/MDR32F9Qx_StdPeriph_Driver/inc/) 
list(APPEND INCLUDE_DIR_FOR_SPD ${CMAKE_SOURCE_DIR}/include/)

# message("INCLUDE_DIR_FOR_SPD = ${INCLUDE_DIR_FOR_SPD}")

set(SOURCE_DIR_SPD ${CMAKE_SOURCE_DIR}/MDR32F9Qx_StdPeriph_Driver/src)

add_library(${SPD_TARGET_NAME} OBJECT 
    #${SOURCE_DIR_SPD}/MDR32F9Qx_adc.c 
    #${SOURCE_DIR_SPD}/MDR32F9Qx_arinc429R.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_arinc429t.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_audio.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_bkp.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_can.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_comp.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_dac.c
    ${SOURCE_DIR_SPD}/MDR32F9Qx_dma.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_ebc.c
    ${SOURCE_DIR_SPD}/MDR32F9Qx_eeprom.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_eth.c
    ${SOURCE_DIR_SPD}/MDR32F9Qx_i2c.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_iwdg.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_keypad.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_led.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_mil_std_1553.c
    ${SOURCE_DIR_SPD}/MDR32F9Qx_port.c
    ${SOURCE_DIR_SPD}/MDR32F9Qx_power.c
    ${SOURCE_DIR_SPD}/MDR32F9Qx_rst_clk.c
    ${SOURCE_DIR_SPD}/MDR32F9Qx_ssp.c
    ${SOURCE_DIR_SPD}/MDR32F9Qx_timer.c
    ${SOURCE_DIR_SPD}/MDR32F9Qx_uart.c
    ${SOURCE_DIR_SPD}/MDR32F9Qx_usb.c
    #${SOURCE_DIR_SPD}/MDR32F9Qx_wwdg.c
)
target_include_directories(${SPD_TARGET_NAME} PRIVATE ${INCLUDE_DIR_FOR_SPD})
target_compile_options(${SPD_TARGET_NAME} PRIVATE ${CPU})
target_compile_definitions(${SPD_TARGET_NAME} PRIVATE -DUSE_MDR1986VE9x)